--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
         <meta name="author" content="Jason (Jay) Musser"> 
         <meta name="description" content="A small little website for getting to know Jay!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>About Jason</title>
-		<style>
-            body{
-                background-image: url("images/HadesScreenshot.png");
-            }
-			.MainHeader{
-				text-align:center;
-			}
-		</style>
     </head>
     <body>
+        <header class="showcase">
+            <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="#"><button>Contact</button></a>
+        </header>
         <div class="MainHeader">
-            <h1>About Jason</h1>
-            <p>Hey! Im Jason, mainly known as Fridge or Jay. I'm 15y/o and since this is more of just a short descrition, read more here.</p>
+        <h1>About Jason</h1>
+        <p>Hey! Im Jason, mainly known as Fridge or Jay. I'm 15y/o and since this is more of just a short descrition, read more here.</p>
         </div>
     </body>
 </html>
