--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <title>About Jason</title>
-    </head>
+	</head>
     <body>
         <header class="showcase">
             <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
@@ -20,7 +20,7 @@
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
         </header>
-        <div class="MainHeader">
+        <div class="AboutMe">
         <h1>About Jason</h1>
         <p>Hey! Im Jason, mainly known as Fridge or Jay. I'm 15y/o and since this is more of just a short descrition, read more here.</p>
         </div>
