--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <li><a href="#">Projects</a></li>
                 </ul>
             </nav>
-            <a class="cta" href="#"><button>Contact</button></a>
+            <a class="contact" href="#"><button>Contact</button></a>
         </header>
         <div class="AboutMe">
         <h1>About Jason</h1>
         <p>Hey! Im Jason, mainly known as Fridge or Jay. I'm 15y/o and since this is more of just a short descrition, read more here.</p> <br>
-        <button>Read More</button>
+        <a class="ReadMore" href="#"><button>Read More</button></a>
         </div>
     </body>
 </html>
