--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="#">About Me</a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="jaythephq.github.io">Home</a></li>
                     <li><a href="#">Projects</a></li>
                 </ul>
             </nav>
