--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
             <nav>
                 <ul class="nav_links">
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="jaythephq.github.io">Home</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="socials.html">Socials N Such</a></li>
                 </ul>
             </nav>
             <a class="contact" href="#"><button>Contact</button></a>
