--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="AboutMe">
         <h1>About Jason</h1>
         <p>Hey! Im Jason, mainly known as Fridge or Jay. I'm 15y/o and since this is more of just a short descrition, read more here.</p> <br>
-        <a class="ReadMore" href="#"><button>Read More</button></a>
+        <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
     </body>
 </html>
