--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="socials.html">Socials N Such</a></li>
                 </ul>
             </nav>
+	    <a class="contact" href="#"><button>Contact</button></a>
         </header>
         <div class="AboutMe">
         <h1>About Jason</h1>
