--- a/socials.html
+++ b/socials.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Jay's Projects</title>
+	</head>
+    <body>
+        <header class="showcase">
+            <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="socials.html">Socials N Such</a></li>
+                </ul>
+            </nav>
+            <a class="contact" href="#"><button>Contact</button></a>
+        </header>
+        <div class="">
+        </div>
+    </body>
+</html>
