changed contact button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-	    <a class="contact" href="#"><button>Contact</button></a>
+            <a class="disc" href="dsc.gg/jayscode"><button>Discord</button></a>
         </header>
         <div class="AboutMe">
         <h1>About Jason</h1>
