--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="dsc.gg/jayscode"><button>Discord</button></a>
+            <a class="disc" href="https://dsc.gg/jayscode"><button>Discord</button></a>
         </header>
         <div class="">
         </div>
