--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="A small little website for getting to know Jay!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <title>About Jason</title>
+        <title>Home Page</title>
 	</head>
     <body>
         <header class="showcase">
