--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,11 @@
             </nav>
             <a class="disc" href="https://dsc.gg/jayscode"><button>Discord</button></a>
         </header>
-        <div class="">
+        <div class="Projects">
+            <h1>Current Projects</h1>
+            <p><a href="https://github.com/PsychOps/Varumox">Varumox</a>; A completely free, open source plugin marketplace for Minecraft;</br>
+            <a href="https://discord.gg/QMhvHuGPMx">PyschOps</a>; An orginization owned by me and <a href="https://zoniq.tk">Zoniq</a> for different coding projects, webistes, and more;</br>
+            This website right now lol;</p>
         </div>
     </body>
 </html>
