--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <title>Jay's Projects</title>
+        <title>About Jay</title>
 	</head>
     <body>
         <header class="showcase">
@@ -18,7 +18,9 @@
             </nav>
             <a class="disc" href="https://dsc.gg/jayscode"><button>Discord</button></a>
         </header>
-        <div class="">
+        <div class="About">
+            <h1>About Me</h1>
+            <p>Hi! Im Jason, but you can call me Jay. Im 15y/o born in America on September 14th 2006. Im a moderator in the <a href="https:aternos.org">Aternos</a> discord server, and I co-own <a href="https://discord.gg/QMhvHuGPMx">PsychOps</a> with <a href="https://zoniq.tk">Zoniq</a>. I'm currently learning HTML and CSS, as you should be able to tell by the semi-scuffed website. If you have any questions for me, head over to my <a href="https://dsc.gg/jayscode">discord</a> and shoot me a dm!</p>
         </div>
     </body>
 </html>
