--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="A small little website for getting to know Jay!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="favicon.ico" type="images/favicon.ico" sizes="16x16">
         <title>Home Page</title>
 	</head>
     <body>
