Updated PsychOps name

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Hi! Im Jason, but you can call me Jay. Im 15y/o born in America on September 14th 2006. Im a moderator in the <a href="https:aternos.org">Aternos</a> discord server, and I co-own <a href="https://discord.gg/QMhvHuGPMx">PsychOps</a> with <a href="https://zoniq.tk">Zoniq</a>. </br>I'm currently learning HTML and CSS, as you should be able to tell by the semi-scuffed website. </br>If you have any questions for me, head over to my <a href="https://discord.gg/KxjaRwebms">discord</a> and shoot me a dm, I'm @JustJay#1810!</p>
+            <p>Hi! Im Jason, but you can call me Jay. Im 15y/o born in America on September 14th 2006. Im a moderator in the <a href="https:aternos.org">Aternos</a> discord server, and I co-own <a href="https://discord.gg/QMhvHuGPMx">PsychOps Studios</a> with <a href="https://zoniq.tk">Zoniq</a>. </br>I'm currently learning HTML and CSS, as you should be able to tell by the semi-scuffed website. </br>If you have any questions for me, head over to my <a href="https://discord.gg/KxjaRwebms">discord</a> and shoot me a dm, I'm @JustJay#1810!</p>
         </div>
     </body>
 </html>
