Updated PsychOps project

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
         <div class="Projects">
             <h1>Current Projects</h1>
             <p><a href="https://github.com/PsychOps/Varumox">Varumox</a>; A completely free, open source plugin marketplace for Minecraft;</br>
-            <a href="https://discord.gg/QMhvHuGPMx">PyschOps</a>; An orginization owned by me and <a href="https://zoniq.tk">Zoniq</a> for different coding projects, webistes, and more;</br>
+            <a href="https://discord.gg/QMhvHuGPMx">PyschOps Studios</a>; An open-source software and web development organisation offering a place for all developers to come together to collaborate and help each other with code.</br>
             This website right now lol;</p>
         </div>
     </body>
