Updated discord invite, added an _blank attribute

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="https://dsc.gg/jayscode"><button>Discord</button></a>
+            <a class="disc" href="https://discord.gg/KxjaRwebms" target = "_blank"><button>Discord</button></a>
         </header>
         <div class="Projects">
             <h1>Current Projects</h1>
