Added _blank attribute

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="https://discord.gg/KxjaRwebms"><button>Discord</button></a>
+            <a class="disc" href="https://discord.gg/KxjaRwebms" target = "_blank"><button>Discord</button></a>
         </header>
         <div class="AboutMe">
         <h1>About Jason</h1>
