--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="https://discord.gg/KxjaRwebms"><button>Discord</button></a>
+            <a class="disc" href="https://discord.gg/KxjaRwebms" target = "_blank"><button>Discord</button></a>
         </header>
         <div class="About">
             <h1>About Me</h1>
