--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
     <body>
         <header class="showcase">
-            <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
+            <img class="logo" src="images/GitGud.png" style="width:44px;height:60.3px;">
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
