Update logo, removed some projects.

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 	</head>
     <body>
         <header class="showcase">
-            <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
+            <img class="logo" src="images/GitGud.png" style="width:44px;height:60.3px;">
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
@@ -20,9 +20,7 @@
         </header>
         <div class="Projects">
             <h1>Current Projects</h1>
-            <p><a href="https://github.com/PsychOps/Varumox">Varumox</a>; A completely free, open source plugin marketplace for Minecraft;</br>
-            <a href="https://discord.gg/QMhvHuGPMx">PyschOps Studios</a>; An open-source software and web development organisation offering a place for all developers to come together to collaborate and help each other with code.</br>
-            This website right now lol;</p>
+            <p>This website right now lol;</p>
         </div>
     </body>
 </html>
