Removed logo from webpages, updated the Projects I was working on

--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
+        <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
         <title>About Jay</title>
 	</head>
     <body>
         <header class="showcase">
-            <img class="logo" src="images/GitGud.png" width="44px"; height="60.3px";>
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
@@ -16,11 +16,11 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="https://discord.gg/KxjaRwebms" target = "_blank"><button>Discord</button></a>
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Hi! Im Jason, but you can call me Jay. Im 15y/o born in America on September 14th 2006. Im a moderator in the <a href="https:aternos.org">Aternos</a> discord server, and I co-own <a href="https://discord.gg/QMhvHuGPMx">PsychOps Studios</a> with <a href="https://zoniq.tk">Zoniq</a>. </br>I'm currently learning HTML and CSS, as you should be able to tell by the semi-scuffed website. </br>If you have any questions for me, head over to my <a href="https://discord.gg/KxjaRwebms">discord</a> and shoot me a dm, I'm @JustJay#1810!</p>
+            <p>Hi! I'm Jason, but you can call me Jay. I'm 16 years old and born in America on September 14th 2006. I'm a moderator in the <a href="https://aternos.org">Aternos</a> discord server.
+                <br>I'm currently learning HTML and CSS, as you should be able to tell by the semi-scuffed website. <br>If you have any questions for me, you can add me on discord at @Bread Goblin#7194</p>
         </div>
     </body>
 </html>
