--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         <meta name="description" content="A small little website for getting to know Jay!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-	<link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
+    	<link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
         <title>Home Page</title>
 	</head>
     <body>
         <header class="showcase">
-            <img class="logo" src="images/GitGud.png" style="width:44px;height:60.3px;">
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
@@ -19,11 +18,10 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="https://discord.gg/KxjaRwebms" target = "_blank"><button>Discord</button></a>
         </header>
         <div class="AboutMe">
         <h1>About Jason</h1>
-        <p>Hey! Im Jason, mainly known as Fridge or Jay. I'm 15y/o and since this is more of just a short description, read more here.</p> <br>
+        <p>Hey! I'm Jason, mainly known as Fridge or Jay. I'm 16 years old and since this is more of just a short description, read more here.</p> <br>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
     </body>
