--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
+        <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
         <title>Jay's Projects</title>
 	</head>
     <body>
         <header class="showcase">
-            <img class="logo" src="images/GitGud.png" style="width:44px;height:60.3px;">
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
@@ -16,11 +16,10 @@
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <a class="disc" href="https://discord.gg/KxjaRwebms" target = "_blank"><button>Discord</button></a>
         </header>
         <div class="Projects">
-            <h1>Current Projects</h1>
-            <p>This website right now lol;</p>
+            <h1>Projects</h1>
+            <p>VACANT</p>
         </div>
     </body>
 </html>
