Updated My Name

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>Jay's Projects</title>
+        <title>Cy's Projects</title>
 	</head>
     <body>
         <header class="showcase">
@@ -19,7 +19,7 @@
         </header>
         <div class="Projects">
             <h1>Projects</h1>
-            <p>VACANT</p>
+            <p>No current projects I'm working on.</p>
         </div>
     </body>
 </html>
