--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Jason (Jay) Musser"> 
         <meta name="description" content="A small little website for getting to know Jay!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -20,8 +19,8 @@
             </nav>
         </header>
         <div class="AboutMe">
-        <h1>About Jason</h1>
-        <p>Hey! I'm Jason, mainly known as Fridge or Jay. I'm 16 years old and since this is more of just a short description, read more here.</p> <br>
+        <h1>About Me!</h1>
+        <p>Hey! I'm Cy! If you'd like to read more here about me, click this button down below!</p> <br>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
     </body>
