--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <div class="AboutMe">
-        <h1>About Me!</h1>
+        <h1>Hello!</h1>
         <p>Hey! I'm Cy! If you'd like to read more here about me, click this button down below!</p> <br>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
