Added redirect to Aternos website and discord server links

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Hi! I'm Cy. I'm a high school student in the U.S.A. I'm a moderator in the <a href="https://aternos.org">Aternos</a> <a href="https://chat.aternos.org">discord server</a>.
+            <p>Hi! I'm Cy. I'm a high school student in the U.S.A. I'm a moderator in the <a href="https://aternos.org" target="_blank">Aternos</a> <a href="https://chat.aternos.org" target="_blank">discord server</a>.
                 <br>I'm currently learning HTML and CSS, as you may be able to tell by the semi-scuffed website. <br>If you have any questions for me, you can add me on discord at @Bread Goblin#7194</p>
         </div>
     </body>
