--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="A small little website for getting to know Jay!">
+        <meta name="description" content="A small little website for getting to know Artemis!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
     	<link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
@@ -20,7 +20,7 @@
         </header>
         <div class="AboutMe">
         <h1>Hello!</h1>
-        <p>Hey! I'm Cy! If you'd like to read more here about me, click this button down below!</p> <br>
+        <p>Hey! I'm Artemis! Welcome to my small website. If you'd like to know about me, click this button below.</p> <br>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
     </body>
