--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>Cy's Projects</title>
+        <title>Art's Projects</title>
 	</head>
     <body>
         <header class="showcase">
