Changed names and about me.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>About Cy</title>
+        <title>About Artemis</title>
 	</head>
     <body>
         <header class="showcase">
@@ -19,8 +19,8 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Hi! I'm Cy. I'm a high school student in the U.S.A. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
-                <br>I'm currently learning HTML and CSS, as you may be able to tell by the semi-scuffed website. <br>If you have any questions for me, you can add me on discord at @Bread Goblin#7194</p>
+            <p>Howdy, I'm Artemis, known online as Arty, or Cy. I'm a high school student in the USA studying coding. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
+                <br>I'm currently learning HTML and CSS, and I am planning on learning Python as well. <br>If you have any questions for me, you can add me on discord at @artemisig#7194</p>
         </div>
     </body>
 </html>
