Updated names, changed coding -> programming

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
         <title>About Artemis</title>
-	</head>
+    </head>
     <body>
         <header class="showcase">
             <nav>
@@ -19,7 +19,7 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Howdy, I'm Artemis, known online as Arty, or Cy. I'm a high school student in the USA studying coding. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
+            <p>Howdy, I'm Artemis. I'm a high school student in the USA studying programming. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
                 <br>I'm currently learning HTML and CSS, and I am planning on learning Python as well. <br>If you have any questions for me, you can add me on discord at @artemisig#7194</p>
         </div>
     </body>
