--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
+                    <li><a href="socials.html">Socials</a></li>
                 </ul>
             </nav>
         </header>
