Added socials profile pictures

--- a/socials.html
+++ b/socials.html
@@ -18,6 +18,11 @@
             </ul>
         </nav>
     </header>
-    <div class="Socials"></div>
+    <div class="Socials">
+        <img src="images/GitGud.png" alt="An image of Hornet from Hollow Knight showing a pin that says Git Gud.">
+        <img src="images/diehornet.png" alt="An image of Hornet from Hollow Knight holding a gun and saying Die">
+        <img src="images/GwenLuluko.png" alt="An image of Gwen Stacy/Ghost-Spider with her mask off">
+        <img src="images/twitchpfp.png" alt="An image of a Minecraft character">
+    </div>
     </body>
 </html>
