--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
         </header>
-        <div class="AboutMe">
+        <div class="Index">
         <h1>Hello!</h1>
         <p>Hey! I'm Artemis! Welcome to my small website. If you'd like to know about me, click this button below.</p> <br>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
