--- a/socials.html
+++ b/socials.html
@@ -25,9 +25,9 @@
         <img src="images/twitchpfp.png" alt="An image of a Minecraft character" class="Twitch">
         <br>
         <a href="https://github.com/Cy-I-Guess" target="_blank" rel="noreferrer noopener"><button class="Github">Github</button></a>
-        <a href="discord.gg/gfAxGEdG" target="_blank" rel="noreferrer noopener"><button class="Discord">Discord</button></a>
-        <a href="https://instagram.com/artemisorcy/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Instagram</button></a>
-        <a href="https://twitch.tv/cyiguess_" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
+        <a href="https://www.discord.gg/gfAxGEdG" target="_blank" rel="noreferrer noopener"><button class="Discord">Discord</button></a>
+        <a href="https://www.instagram.com/artemisorcy/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Instagram</button></a>
+        <a href="https://www.twitch.tv/cyiguess_" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
     </div>
     </body>
 </html>
