--- a/socials.html
+++ b/socials.html
@@ -26,7 +26,7 @@
         <br>
         <a href="https://github.com/Cy-I-Guess" target="_blank" rel="noreferrer noopener"><button class="Github">Github</button></a>
         <a href="https://www.discord.gg/gfAxGEdG" target="_blank" rel="noreferrer noopener"><button class="Discord">Discord</button></a>
-        <a href="https://www.instagram.com/artemisorcy/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Instagram</button></a>
+        <a href="https://www.instagram.com/artemisorcy/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Insta</button></a>
         <a href="https://www.twitch.tv/cyiguess_" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
     </div>
     </body>
