--- a/socials.html
+++ b/socials.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
         <title>Socials</title>
