--- a/socials.html
+++ b/socials.html
@@ -20,14 +20,12 @@
     </header>
     <div class="Socials">
         <img src="images/GitGud.png" alt="An image of Hornet from Hollow Knight showing a pin that says Git Gud." class="GitGud">
-        <img src="images/diehornet.png" alt="An image of Hornet from Hollow Knight holding a gun and saying Die" class="DieHornet">
         <img src="images/GwenLuluko.png" alt="An image of Gwen Stacy/Ghost-Spider with her mask off" class="Ghost">
         <img src="images/twitchpfp.png" alt="An image of a Minecraft character" class="Twitch">
         <br>
         <a href="https://github.com/Cy-I-Guess" target="_blank" rel="noreferrer noopener"><button class="Github">Github</button></a>
-        <a href="https://www.discord.gg/gfAxGEdG" target="_blank" rel="noreferrer noopener"><button class="Discord">Discord</button></a>
-        <a href="https://www.instagram.com/artemisorcy/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Insta</button></a>
-        <a href="https://www.twitch.tv/cyiguess_" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
+        <a href="https://www.instagram.com/artemiguess/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Insta</button></a>
+        <a href="https://www.twitch.tv/notartemisig" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
     </div>
     </body>
 </html>
