Updated programming knowledge.

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <div class="About">
             <h1>About Me</h1>
             <p>Howdy, I'm Artemis. I'm a high school student in the USA studying programming. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
-                <br>I'm currently learning HTML and CSS, and I am planning on learning Python as well. <br>If you have any questions for me, you can add me on discord at @ghostyig</p>
+                <br>I know parts of HTML5 and CSS, and am currently learning Java. <br>If you have any questions for me, you can add me on discord at @ghostyig</p>
         </div>
     </body>
 </html>
