--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </header>
         <div class="Index">
         <h1>Hello!</h1>
-        <p>Hey! I'm Artemis! Welcome to my small website. If you'd like to know about me, click this button below.</p> <br>
+        <p>Hi, I'm Artemis. This is a rough little website to help test my skills, and introduce myself!</p> <br>
+            <p>Click the button below to go to my about me page!</p>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
     </body>
