Testing the addition of a footer

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         </header>
         <div class="Projects">
             <h1>Projects</h1>
-            <p>No current projects I'm working on.</p>
+            <p>This website. <br>College education.. does that count as a project?</p>
         </div>
     </body>
 </html>
