--- a/about.html
+++ b/about.html
@@ -20,8 +20,11 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Howdy, I'm Artemis. I'm a high school student in the USA studying programming. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
-                <br>I know HTML and CSS, and am currently learning Java. <br>If you have any questions for me, you can add me on discord at @ghostyig</p>
+            <p>Howdy, I'm Artemis, and I am a sophomore in college. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
+                <br>I am currently a novice when it comes to HTML or CSS formats. <br>If you have any questions for me, you can add me on discord at @artemisig</p>
         </div>
     </body>
+    <footer>
+        <p>This is a test of the Footer function in HTML5.</p>
+    </footer>
 </html>
