Edited footer size, updated Nav Bar, added a photography tab

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
         <title>About Artemis</title>
     </head>
-    <body>
+    <body class="about-page">
         <header class="showcase">
             <nav>
                 <ul class="nav_links">
@@ -15,6 +15,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="socials.html" class="SocialsNavBar">Socials</a></li>
+                    <li><a href="photography.html">Photos</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,6 +26,6 @@
         </div>
     </body>
     <footer>
-        <p>This is a test of the Footer function in HTML5.</p>
+        <p class="footerText">This is a test of the Footer function in HTML5.</p>
     </footer>
 </html>
