--- a/photography.html
+++ b/photography.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>Arty's Projects</title>
-	</head>
-    <body>
+        <title>Arty's Photography</title>
+    </head>
+    <body class="about-page">
         <header class="showcase">
             <nav>
-                <ul class="nav_links">
+            <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -19,10 +19,6 @@
                 </ul>
             </nav>
         </header>
-        <div class="Projects">
-            <h1>Projects</h1>
-            <p>This website. <br>College education.. does that count as a project?</p>
-        </div>
     </body>
     <footer>
         <p class="footerText">This is a test of the Footer function in HTML5.</p>
