--- a/socials.html
+++ b/socials.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="socials.html" class="SocialsNavBar">Socials</a></li>
+                <li><a href="photography.html">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -28,4 +29,7 @@
         <a href="https://www.twitch.tv/notartemisig" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
     </div>
     </body>
+    <footer>
+        <p class="footerText">This is a test of the Footer function in HTML5.</p>
+    </footer>
 </html>
