--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
+                    <li>/</li>
                     <li><a href="index.html">Home</a></li>
+                    <li>/</li>
                     <li><a href="projects.html">Projects</a></li>
+                    <li>/</li>
                     <li><a href="socials.html" class="SocialsNavBar">Socials</a></li>
+                    <li>/</li>
+                    <li><a href="photography.html">Photos</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,4 +30,7 @@
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
     </body>
+    <footer>
+        <p class="footerText">This is a test of the Footer function in HTML5.</p>
+    </footer>
 </html>
