--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Howdy, I'm Artemis, and I am a sophomore in college. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
+            <p>Howdy, I'm Artemis, and I am a freshman in college. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
                 <br>I am currently a novice when it comes to HTML or CSS formats. <br>If you have any questions for me, you can add me on discord at @artemisig</p>
         </div>
     </body>
