Added additional classes to navbar

--- a/about.html
+++ b/about.html
@@ -12,20 +12,20 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="about.html">About Me</a></li>
-                    <li>/</li>
+                    <li class="fSlash1">/</li>
                     <li><a href="index.html">Home</a></li>
-                    <li>/</li>
+                    <li class="fSlash2">/</li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li>/</li>
+                    <li class="fSlash3">/</li>
                     <li><a href="socials.html" class="SocialsNavBar">Socials</a></li>
-                    <li>/</li>
+                    <li class="fSlash4">/</li>
                     <li><a href="photography.html">Photos</a></li>
                 </ul>
             </nav>
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Howdy, I'm Artemis, and I am a freshman in college. I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
+            <p>Howdy, I'm Artemis, and I am a freshman in college. <br>I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
                 <br>I am currently a novice when it comes to HTML or CSS formats. <br>If you have any questions for me, you can add me on discord at @artemisig</p>
         </div>
     </body>
