--- a/photography.html
+++ b/photography.html
@@ -12,13 +12,13 @@
             <nav>
             <ul class="nav_links">
                 <li><a href="about.html">About Me</a></li>
-                <li>/</li>
+                <li class="fSlash1">/</li>
                 <li><a href="index.html">Home</a></li>
-                <li>/</li>
+                <li class="fSlash2">/</li>
                 <li><a href="projects.html">Projects</a></li>
-                <li>/</li>
+                <li class="fSlash3">/</li>
                 <li><a href="socials.html" class="SocialsNavBar">Socials</a></li>
-                <li>/</li>
+                <li class="fSlash4">/</li>
                 <li><a href="photography.html">Photos</a></li>
                 </ul>
             </nav>
