Removed Socials images, added text

--- a/drawings.html
+++ b/drawings.html
@@ -23,15 +23,7 @@
             </ul>
         </nav>
     </header>
-    <div class="Socials">
-        <img src="images/GitGud.png" alt="An image of Hornet from Hollow Knight showing a pin that says Git Gud." class="GitGud">
-        <img src="images/GwenLuluko.png" alt="An image of Gwen Stacy/Ghost-Spider with her mask off" class="Ghost">
-        <img src="images/twitchpfp.png" alt="An image of a Minecraft character" class="Twitch">
-        <br>
-        <a href="https://github.com/Cy-I-Guess" target="_blank" rel="noreferrer noopener"><button class="Github">Github</button></a>
-        <a href="https://www.instagram.com/artemiguess/" target="_blank" rel="noreferrer noopener"><button class="Instagram">Insta</button></a>
-        <a href="https://www.twitch.tv/notartemisig" target="_blank" rel="noreferrer noopener"><button class="Twitch">Twitch</button></a>
-    </div>
+    <p>Helloo! I will figure this shit out later dont worry. I need to learn how to make slideshows or folders or something :/</p>
     </body>
     <footer>
         <p class="footerText">This is a test of the Footer function in HTML5.</p>
