--- a/photography.html
+++ b/photography.html
@@ -17,7 +17,7 @@
                 <li class="fSlash2">/</li>
                 <li><a href="projects.html">Projects</a></li>
                 <li class="fSlash3">/</li>
-                <li><a href="drawings.html" class="SocialsNavBar">Socials</a></li>
+                <li><a href="drawings.html" class="SocialsNavBar">Drawings</a></li>
                 <li class="fSlash4">/</li>
                 <li><a href="photography.html">Photos</a></li>
                 </ul>
