--- a/drawings.html
+++ b/drawings.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>Socials</title>
+        <title>Arty's Art</title>
     </head>
     <body>
     <header class="showcase">
