Updated Discord username, and personal name. Changed School status. Fixed various capitalization.

--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
         </header>
         <div class="About">
             <h1>About Me</h1>
-            <p>Howdy, I'm Artemis, and I am a freshman in college. <br>I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">discord server</a>.
-                <br>I am currently a novice when it comes to HTML or CSS formats. <br>If you have any questions for me, you can add me on discord at @artemisig</p>
+            <p>Howdy, I'm December, a 19 year old queer student, employee, and person. <br>I'm a moderator in the <a href="https://aternos.org" target="_blank" rel="noreferrer noopener">Aternos</a> <a href="https://chat.aternos.org" target="_blank" rel="noreferrer noopener">Discord server</a>.
+                <br>I am currently studying programming, focusing in Web Development. <br>If you have any questions for me, you can add me on Discord at @yrlocalenby</p>
         </div>
     </body>
     <footer>
