Updated name "Artemis" and variations to "December" and variations

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>About Artemis</title>
+        <title>About Dess</title>
     </head>
     <body class="about-page">
         <header class="showcase">
