--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <div class="Index">
         <h1>Hello!</h1>
-        <p>Hi, I'm Artemis. This is a rough little website to help test my skills, and introduce myself!</p>
+        <p>Hi, I'm December. This is a rough little website to help test my skills, and introduce myself!</p>
             <p>Click the button below to go to my about me page!</p>
         <a class="ReadMore" href="about.html"><button>Read More</button></a>
         </div>
