--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <link rel="stylesheet" href="styles.css">
         <link href="images/favicon.ico" rel="shortcut icon" type="images/GitGud">
-        <title>Arty's Projects</title>
+        <title>Dess' Projects</title>
 	</head>
     <body>
         <header class="showcase">
@@ -24,7 +24,7 @@
         </header>
         <div class="Projects">
             <h1>Projects</h1>
-            <p>This website. <br>College education.. does that count as a project?</p>
+            <p>This website. <br>College education... does that count as a project?<br>Drawing, hopefully more of it.</p>
         </div>
     </body>
     <footer>
